--- a/locales/fr.po
+++ b/locales/fr.po
@@ -1,5 +1,6 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: simple-icons-website\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -8,9 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: fr\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-25T02:25:23.933Z\n"
+"PO-Revision-Date: 2022-09-25T02:32:38.008Z\n"
 "MIME-Version: 1.0\n"
-"Project-Id-Version: \n"
 
 msgid "Extension"
 msgstr "Extension"
