--- a/locales/fr.po
+++ b/locales/fr.po
@@ -4,12 +4,12 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language-Team: fr <EMAIL@ADDRESS>\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: fr <https://github.com/simple-icons>\n"
+"Last-Translator: @mondeja <https://github.com/mondeja>\n"
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: fr\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-25T02:32:38.008Z\n"
+"PO-Revision-Date: 2022-09-25T02:41:22.385Z\n"
 "MIME-Version: 1.0\n"
 
 msgid "Extension"
