--- a/locales/fr.po
+++ b/locales/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: fr\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-25T02:41:22.385Z\n"
+"PO-Revision-Date: 2022-09-25T03:23:14.896Z\n"
 "MIME-Version: 1.0\n"
 
 msgid "Extension"
@@ -116,3 +116,6 @@ msgstr "Fait avec ❤️ sur GitHub"
 
 msgid "$nIcons Free SVG icons for popular brands"
 msgstr "$nIcons SVG gratuits pour les marques populaires"
+
+msgid "Language"
+msgstr "Langue"
