--- a/locales/fr.po
+++ b/locales/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: fr\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-25T03:23:14.896Z\n"
+"PO-Revision-Date: 2022-09-25T03:40:56.478Z\n"
 "MIME-Version: 1.0\n"
 
 msgid "Extension"
@@ -49,7 +49,7 @@ msgid "Sort by relevance"
 msgstr "Trier par pertinence"
 
 msgid "Mode"
-msgstr "Mode"
+msgstr "Thème"
 
 msgid "Light color scheme"
 msgstr "Thème de couleur clair"
