--- a/locales/fr.po
+++ b/locales/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: fr\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-26T22:59:03.636Z\n"
+"PO-Revision-Date: 2022-09-27T00:18:49.384Z\n"
 "MIME-Version: 1.0\n"
 
 msgid "Extension"
@@ -123,5 +123,8 @@ msgstr "Langue"
 msgid "Sort by color"
 msgstr "Trier par couleur"
 
-msgid "DEPRECATED (removal at $version)"
-msgstr "OBSOLÈTE (suppression à $version)"
+msgid "Deprecated"
+msgstr "Obsolète"
+
+msgid "Removal at $version"
+msgstr "Suppression à $version"
