--- a/locales/it.po
+++ b/locales/it.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2022-09-26T15:39:06.158Z\n"
 "MIME-Version: 1.0\n"
 "Project-Id-Version: simple-icons-website\n"
-"PO-Revision-Date: 2022-09-26T22:59:03.636Z\n"
+"PO-Revision-Date: 2022-09-27T00:18:49.384Z\n"
 
 msgid "$nIcons Free SVG icons for popular brands"
 msgstr "$nIcons icone SVG gratuite per marchi famosi"
@@ -123,5 +123,8 @@ msgstr "Fatto con ❤️ su GitHub"
 msgid "Sort by color"
 msgstr "Ordina per colore"
 
-msgid "DEPRECATED (removal at $version)"
-msgstr "DEPRECATO (rimozione alla $version)"
+msgid "Deprecated"
+msgstr "Deprecato"
+
+msgid "Removal at $version"
+msgstr "Rimozione in $version"
