--- a/locales/es.po
+++ b/locales/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: es\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-27T00:18:49.384Z\n"
+"PO-Revision-Date: 2022-09-28T14:06:20.828Z\n"
 "MIME-Version: 1.0\n"
 
 msgid "Extension"
@@ -128,3 +128,39 @@ msgstr "Obsoleto"
 
 msgid "Removal at $version"
 msgstr "Se elimina en $version"
+
+msgid "Layout"
+msgstr "Diseño"
+
+msgid "Comfortable"
+msgstr "Confortable"
+
+msgid "Compact"
+msgstr "Compacto"
+
+msgid "view $iconTitle"
+msgstr "ver $iconTitle"
+
+msgid "Download SVG"
+msgstr "Descargar SVG"
+
+msgid "Download colored SVG"
+msgstr "Descargar SVG coloreado"
+
+msgid "Download PDF"
+msgstr "Descargar PDF"
+
+msgid "Report $iconTitle as outdated"
+msgstr "Reportar $iconTitle como desactualizado"
+
+msgid "Report icon as outdated"
+msgstr "Reportar icono desactualizado"
+
+msgid "It will be removed at version $version"
+msgstr "Será eliminado en la versión $version"
+
+msgid "no brand guidelines"
+msgstr "sin directrices de marca"
+
+msgid "no icon license"
+msgstr "sin licencia de icono"
