--- a/locales/fr.po
+++ b/locales/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "Language: fr\n"
 "POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-27T00:18:49.384Z\n"
+"PO-Revision-Date: 2022-09-28T14:06:03.221Z\n"
 "MIME-Version: 1.0\n"
 
 msgid "Extension"
@@ -128,3 +128,39 @@ msgstr "Obsolète"
 
 msgid "Removal at $version"
 msgstr "Suppression à $version"
+
+msgid "Layout"
+msgstr "Disposition"
+
+msgid "Comfortable"
+msgstr "Confortable"
+
+msgid "Compact"
+msgstr "Compact"
+
+msgid "view $iconTitle"
+msgstr "voir $iconTitle"
+
+msgid "Download SVG"
+msgstr "Télécharger SVG"
+
+msgid "Download colored SVG"
+msgstr "Télécharger SVG coloré"
+
+msgid "Download PDF"
+msgstr "Télécharger PDF"
+
+msgid "Report $iconTitle as outdated"
+msgstr "Signaler $iconTitle comme obsolète"
+
+msgid "Report icon as outdated"
+msgstr "Signaler l'icône comme obsolète"
+
+msgid "It will be removed at version $version"
+msgstr "Il sera supprimé à la version $version"
+
+msgid "no brand guidelines"
+msgstr "aucune directive de marque"
+
+msgid "no icon license"
+msgstr "aucune licence d'icône"
