--- a/locales/it.po
+++ b/locales/it.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2022-09-26T15:39:06.158Z\n"
 "MIME-Version: 1.0\n"
 "Project-Id-Version: simple-icons-website\n"
-"PO-Revision-Date: 2022-09-27T00:18:49.384Z\n"
+"PO-Revision-Date: 2022-09-28T14:06:03.221Z\n"
 
 msgid "$nIcons Free SVG icons for popular brands"
 msgstr "$nIcons icone SVG gratuite per marchi famosi"
@@ -128,3 +128,39 @@ msgstr "Deprecato"
 
 msgid "Removal at $version"
 msgstr "Rimozione in $version"
+
+msgid "Layout"
+msgstr "Layout"
+
+msgid "Comfortable"
+msgstr "Comodo"
+
+msgid "Compact"
+msgstr "Compatto"
+
+msgid "view $iconTitle"
+msgstr "visualizza $iconTitle"
+
+msgid "Download SVG"
+msgstr "Scarica SVG"
+
+msgid "Download colored SVG"
+msgstr "Scarica SVG colorato"
+
+msgid "Download PDF"
+msgstr "Scarica PDF"
+
+msgid "Report $iconTitle as outdated"
+msgstr "Segnala $iconTitle come obsoleto"
+
+msgid "Report icon as outdated"
+msgstr "Segnala icona come obsoleta"
+
+msgid "It will be removed at version $version"
+msgstr "Sarà rimosso nella versione $version"
+
+msgid "no brand guidelines"
+msgstr "nessuna guida del marchio"
+
+msgid "no icon license"
+msgstr "nessuna licenza dell'icona"
