--- a/locales/zh-CN.po
+++ b/locales/zh-CN.po
@@ -1,19 +1,20 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: simple-icons-website\n"
+"Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
+"POT-Creation-Date: 2022-09-27T13:42:46.869Z\n"
+"PO-Revision-Date: 2022-09-29 23:12+0800\n"
+"Last-Translator: @LitoMore <https://github.com/LitoMore>\n"
+"Language-Team: zh-CN <https://github.com/simple-icons>\n"
+"Language: zh_CN\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language-Team: zh-CN <https://github.com/simple-icons>\n"
-"Last-Translator: @LitoMore <https://github.com/LitoMore>\n"
-"Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
-"Language: zh-CN\n"
-"POT-Creation-Date: 2022-09-27T13:42:46.869Z\n"
-"MIME-Version: 1.0\n"
-"Project-Id-Version: simple-icons-website\n"
-"PO-Revision-Date: 2022-09-28T14:06:03.221Z\n"
+"X-Generator: Poedit 3.1.1\n"
 
 msgid "$nIcons Free SVG icons for popular brands"
-msgstr "囊括 $nIcons 种流行品牌的免费 SVG 图标"
+msgstr "包含 $nIcons 种流行品牌的免费 SVG 图标库"
 
 msgid "Extension"
 msgstr "扩展及插件"
@@ -34,7 +35,7 @@ msgid "Language"
 msgstr "语言"
 
 msgid "$nIcons Free <abbr title=\"Scalable Vector Graphic\">SVG</abbr> icons for popular brands"
-msgstr "囊括 $nIcons 种流行品牌的免费 <abbr title=\"矢量图\">SVG</abbr> 图标"
+msgstr "包含 $nIcons 种流行品牌的免费 <abbr title=\"矢量图\">SVG</abbr> 图标库"
 
 msgid "Controls are only available when JavaScript is enabled."
 msgstr "要查看网站上的内容，请在浏览器中启用 JavaScript。"
@@ -94,7 +95,7 @@ msgid "Deprecated"
 msgstr "已废弃"
 
 msgid "Removal at $version"
-msgstr "在 $version 中删除"
+msgstr "将在 $version 中删除"
 
 msgid "$iconTitle guidelines"
 msgstr "$iconTitle 指南"
@@ -109,7 +110,7 @@ msgid "$iconTitle color"
 msgstr "$iconTitle 颜色"
 
 msgid "A <a href=\"https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md\">CCO</a> project maintained by the <a href=\"https://github.com/simple-icons/simple-icons/graphs/contributors\">Simple Icons contributors</a>."
-msgstr "此项基于 <a href=\"https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md\">CCO</a> 许可证，并由 <a href=\"https://github.com/simple-icons/simple-icons/graphs/contributors\">Simple Icons 贡献者们</a> 维护。"
+msgstr "此项目基于 <a href=\"https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md\">CCO</a> 许可证，并由 <a href=\"https://github.com/simple-icons/simple-icons/graphs/contributors\">Simple Icons 贡献者们</a> 维护。"
 
 msgid "Use $repoLink for requests, corrections and contributions."
 msgstr "请通过 $repoLink 来提交图标相关请求、更正及其它贡献。"
@@ -160,7 +161,7 @@ msgid "It will be removed at version $version"
 msgstr "将在 $version 中删除"
 
 msgid "no brand guidelines"
-msgstr "无品牌指南"
+msgstr "缺少品牌指南"
 
 msgid "no icon license"
-msgstr "无图标许可证"
+msgstr "缺少图标许可证"
