--- a/locales/zh-TW.po
+++ b/locales/zh-TW.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: simple-icons-website\n"
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "POT-Creation-Date: 2022-09-28T14:14:50.054Z\n"
-"PO-Revision-Date: 2022-09-28 22:31+0800\n"
+"PO-Revision-Date: 2022-09-29 23:06+0800\n"
 "Last-Translator: @LitoMore <https://github.com/LitoMore>\n"
 "Language-Team: zh-TW <https://github.com/simple-icons>\n"
 "Language: zh_TW\n"
@@ -129,3 +129,39 @@ msgstr "網站項目"
 
 msgid "Made with ❤️ on GitHub"
 msgstr "Made with ❤️ on GitHub"
+
+msgid "no brand guidelines"
+msgstr "缺少品牌指南"
+
+msgid "no icon license"
+msgstr "缺少圖標許可證"
+
+msgid "It will be removed at version $version"
+msgstr "將在 $version 中刪除"
+
+msgid "Download SVG"
+msgstr "下載 SVG"
+
+msgid "Download colored SVG"
+msgstr "下載彩色 SVG"
+
+msgid "Download PDF"
+msgstr "下載 PDF"
+
+msgid "Report icon as outdated"
+msgstr "報告圖標已過時"
+
+msgid "Layout"
+msgstr "佈局"
+
+msgid "Comfortable"
+msgstr "舒適"
+
+msgid "Compact"
+msgstr "緊湊"
+
+msgid "view $iconTitle"
+msgstr "查看 $iconTitle"
+
+msgid "Report $iconTitle as outdated"
+msgstr "報告 $iconTitle 已過時"
