--- a/locales/zh-HK.po
+++ b/locales/zh-HK.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2022-09-29 23:05+0800\n"
 "Last-Translator: @LitoMore <https://github.com/LitoMore>\n"
 "Language-Team: zh-HK <https://github.com/simple-icons>\n"
-"Language: zh_HK\n"
+"Language: zh-HK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
