--- a/locales/zh-HK.po
+++ b/locales/zh-HK.po
@@ -2,11 +2,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: simple-icons-website\n"
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
-"POT-Creation-Date: 2022-09-27T13:42:46.869Z\n"
-"PO-Revision-Date: 2022-09-29 23:12+0800\n"
+"POT-Creation-Date: 2022-09-28T13:51:38.923Z\n"
+"PO-Revision-Date: 2022-09-29 23:05+0800\n"
 "Last-Translator: @LitoMore <https://github.com/LitoMore>\n"
-"Language-Team: zh-CN <https://github.com/simple-icons>\n"
-"Language: zh-CN\n"
+"Language-Team: zh-HK <https://github.com/simple-icons>\n"
+"Language: zh-HK\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,88 +14,88 @@ msgstr ""
 "X-Generator: Poedit 3.1.1\n"
 
 msgid "$nIcons Free SVG icons for popular brands"
-msgstr "包含 $nIcons 种流行品牌的免费 SVG 图标库"
+msgstr "包含 $nIcons 種流行品牌的免費 SVG 圖標庫"
 
 msgid "Extension"
-msgstr "扩展及插件"
+msgstr "擴展"
 
 msgid "Author"
-msgstr "作者"
+msgstr "開發者"
 
 msgid "Main Repository"
-msgstr "主项目"
+msgstr "主項目"
 
 msgid "Legal Disclaimer"
-msgstr "免责声明"
+msgstr "法律免責聲明"
 
 msgid "Third-Party Extensions"
-msgstr "第三方扩展及插件"
+msgstr "第三方擴展"
 
 msgid "Language"
-msgstr "语言"
+msgstr "語言"
 
 msgid "$nIcons Free <abbr title=\"Scalable Vector Graphic\">SVG</abbr> icons for popular brands"
-msgstr "包含 $nIcons 种流行品牌的免费 <abbr title=\"矢量图\">SVG</abbr> 图标库"
+msgstr "包含 $nIcons 種流行品牌的免費 <abbr title=\"矢量圖形\">SVG</abbr> 圖標庫"
 
 msgid "Controls are only available when JavaScript is enabled."
-msgstr "要查看网站上的内容，请在浏览器中启用 JavaScript。"
+msgstr "控件僅在啟用 JavaScript 時可用。"
 
 msgid "Search"
-msgstr "搜索"
+msgstr "搜尋"
 
 msgid "Search by brand..."
-msgstr "按品牌名称搜索…"
+msgstr "按品牌搜尋⋯"
 
 msgid "Order"
-msgstr "排序方式"
+msgstr "排序依據"
 
 msgid "Sort alphabetically"
-msgstr "按字母排序"
+msgstr "按字母順序排序"
 
 msgid "Sort by color"
-msgstr "按颜色排序"
+msgstr "按顏色排序"
 
 msgid "Sort by relevance"
-msgstr "按相关度排序"
+msgstr "按相關性排序"
 
 msgid "Mode"
-msgstr "颜色模式"
+msgstr "模式"
 
 msgid "Light color scheme"
-msgstr "浅色模式"
+msgstr "淺色方案"
 
 msgid "Dark color scheme"
-msgstr "深色模式"
+msgstr "深色方案"
 
 msgid "System color scheme"
-msgstr "自动模式"
+msgstr "跟隨系統配色方案"
 
 msgid "Download"
-msgstr "下载格式"
+msgstr "下載"
 
 msgid "download SVG"
-msgstr "下载 SVG"
+msgstr "下載 SVG"
 
 msgid "download PDF"
-msgstr "下载 PDF"
+msgstr "下載PDF"
 
 msgid "Icon missing?"
-msgstr "缺少图标？"
+msgstr "缺少圖標？"
 
 msgid "Submit a request"
-msgstr "提交请求"
+msgstr "建立支援服務單"
 
 msgid "$iconTitle SVG"
 msgstr "$iconTitle SVG"
 
 msgid "$iconTitle icon"
-msgstr "$iconTitle 图标"
+msgstr "$iconTitle 圖標"
 
 msgid "Deprecated"
-msgstr "已废弃"
+msgstr "已過時（未來將停用）"
 
 msgid "Removal at $version"
-msgstr "将在 $version 中删除"
+msgstr "將在 $version 刪除"
 
 msgid "$iconTitle guidelines"
 msgstr "$iconTitle 指南"
@@ -104,64 +104,64 @@ msgid "Brand Guidelines"
 msgstr "品牌指南"
 
 msgid "$iconTitle icon license"
-msgstr "$iconTitle 图标许可证"
+msgstr "$iconTitle 圖標許可證"
 
 msgid "$iconTitle color"
-msgstr "$iconTitle 颜色"
+msgstr "$icon 顏色"
 
 msgid "A <a href=\"https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md\">CCO</a> project maintained by the <a href=\"https://github.com/simple-icons/simple-icons/graphs/contributors\">Simple Icons contributors</a>."
-msgstr "此项目基于 <a href=\"https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md\">CCO</a> 许可证，并由 <a href=\"https://github.com/simple-icons/simple-icons/graphs/contributors\">Simple Icons 贡献者们</a> 维护。"
+msgstr "由 <a href=\"https://github.com/simple-icons/simple-icons/graphs/contributors\">Simple Icons 貢獻者</a> 維護的 <a href=\"https://github.com/simple-icons/simple-icons/blob/develop/LICENSE.md\">CCO</a> 項目。"
 
 msgid "Use $repoLink for requests, corrections and contributions."
-msgstr "请通过 $repoLink 来提交图标相关请求、更正及其它贡献。"
+msgstr "使用 $repoLink 提交請求、更正和貢獻。"
 
 msgid "Kindly supported by your donations at <a href=\"https://opencollective.com/simple-icons\">Open Collective</a>."
-msgstr "您可以通过 <a href=\"https://opencollective.com/simple-icons\">Open Collective</a> 来赞助支持我们。"
+msgstr "歡迎您通過 <a href=\"https://opencollective.com/simple-icons\">Open Collective</a> 捐款支持。"
 
 msgid "Twitter logo"
-msgstr "Twitter"
+msgstr "Twitter logo"
 
 msgid "Share this on Twitter!"
-msgstr "分享到 Twitter"
+msgstr "分享至 Twitter"
 
-msgid "Website repository"
-msgstr "项目地址"
+msgid "website repository"
+msgstr "網站項目"
 
 msgid "Made with ❤️ on GitHub"
 msgstr "Made with ❤️ on GitHub"
-
-msgid "Download SVG"
-msgstr "下载 SVG"
-
-msgid "Download colored SVG"
-msgstr "下载彩色 SVG"
-
-msgid "Download PDF"
-msgstr "下载 PDF"
-
-msgid "Report icon as outdated"
-msgstr "报告图标过时"
-
-msgid "Layout"
-msgstr "布局"
-
-msgid "Comfortable"
-msgstr "舒适"
-
-msgid "Compact"
-msgstr "紧凑"
-
-msgid "view $iconTitle"
-msgstr "查看 $iconTitle"
-
-msgid "Report $iconTitle as outdated"
-msgstr "报告 $iconTitle 过时"
-
-msgid "It will be removed at version $version"
-msgstr "将在 $version 中删除"
 
 msgid "no brand guidelines"
 msgstr "缺少品牌指南"
 
 msgid "no icon license"
-msgstr "缺少图标许可证"
+msgstr "缺少圖標許可證"
+
+msgid "It will be removed at version $version"
+msgstr "將在 $version 中刪除"
+
+msgid "Download SVG"
+msgstr "下載 SVG"
+
+msgid "Download colored SVG"
+msgstr "下載彩色 SVG"
+
+msgid "Download PDF"
+msgstr "下載 PDF"
+
+msgid "Report icon as outdated"
+msgstr "報告圖標已過時"
+
+msgid "Layout"
+msgstr "佈局"
+
+msgid "Comfortable"
+msgstr "舒適"
+
+msgid "Compact"
+msgstr "緊湊"
+
+msgid "view $iconTitle"
+msgstr "查看 $iconTitle"
+
+msgid "Report $iconTitle as outdated"
+msgstr "報告 $iconTitle 已過時"
