--- a/locales/es.po
+++ b/locales/es.po
@@ -1,16 +1,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: simple-icons-website\n"
+"Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
+"POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
+"PO-Revision-Date: 2022-10-02 16:42+0800\n"
+"Last-Translator: @mondeja <https://github.com/mondeja>\n"
+"Language-Team: es <https://github.com/simple-icons>\n"
+"Language: es\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language-Team: es <https://github.com/simple-icons>\n"
-"Last-Translator: @mondeja <https://github.com/mondeja>\n"
-"Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
-"Language: es\n"
-"POT-Creation-Date: 2022-09-25T01:25:24.834Z\n"
-"PO-Revision-Date: 2022-09-28T14:06:20.828Z\n"
-"MIME-Version: 1.0\n"
+"X-Generator: Poedit 3.1.1\n"
 
 msgid "Extension"
 msgstr "Extensión"
@@ -150,12 +151,6 @@ msgstr "Descargar SVG coloreado"
 msgid "Download PDF"
 msgstr "Descargar PDF"
 
-msgid "Report $iconTitle as outdated"
-msgstr "Reportar $iconTitle como desactualizado"
-
-msgid "Report icon as outdated"
-msgstr "Reportar icono desactualizado"
-
 msgid "It will be removed at version $version"
 msgstr "Será eliminado en la versión $version"
 
@@ -164,3 +159,9 @@ msgstr "sin directrices de marca"
 
 msgid "no icon license"
 msgstr "sin licencia de icono"
+
+msgid "Icon outdated?"
+msgstr "¿Icono obsoleto?"
+
+msgid "Report outdated icon"
+msgstr "Informar de un icono obsoleto"
