--- a/locales/it.po
+++ b/locales/it.po
@@ -1,16 +1,17 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: simple-icons-website\n"
+"Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
+"POT-Creation-Date: 2022-09-26T15:39:06.158Z\n"
+"PO-Revision-Date: 2022-10-02 16:42+0800\n"
+"Last-Translator: @mondeja <https://github.com/mondeja>\n"
+"Language-Team: it <https://github.com/simple-icons>\n"
+"Language: it\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language-Team: it <https://github.com/simple-icons>\n"
-"Last-Translator: @mondeja <https://github.com/mondeja>\n"
-"Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
-"Language: it\n"
-"POT-Creation-Date: 2022-09-26T15:39:06.158Z\n"
-"MIME-Version: 1.0\n"
-"Project-Id-Version: simple-icons-website\n"
-"PO-Revision-Date: 2022-09-28T14:06:03.221Z\n"
+"X-Generator: Poedit 3.1.1\n"
 
 msgid "$nIcons Free SVG icons for popular brands"
 msgstr "$nIcons icone SVG gratuite per marchi famosi"
@@ -150,12 +151,6 @@ msgstr "Scarica SVG colorato"
 msgid "Download PDF"
 msgstr "Scarica PDF"
 
-msgid "Report $iconTitle as outdated"
-msgstr "Segnala $iconTitle come obsoleto"
-
-msgid "Report icon as outdated"
-msgstr "Segnala icona come obsoleta"
-
 msgid "It will be removed at version $version"
 msgstr "Sarà rimosso nella versione $version"
 
@@ -164,3 +159,9 @@ msgstr "nessuna guida del marchio"
 
 msgid "no icon license"
 msgstr "nessuna licenza dell'icona"
+
+msgid "Icon outdated?"
+msgstr "Icona obsoleta?"
+
+msgid "Report outdated icon"
+msgstr "Segnala un'icona obsoleta"
