--- a/locales/zh-HK.po
+++ b/locales/zh-HK.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: simple-icons-website\n"
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "POT-Creation-Date: 2022-09-28T13:51:38.923Z\n"
-"PO-Revision-Date: 2022-09-29T15:48:33.956Z\n"
+"PO-Revision-Date: 2022-10-02 16:41+0800\n"
 "Last-Translator: @LitoMore <https://github.com/LitoMore>\n"
 "Language-Team: zh-HK <https://github.com/simple-icons>\n"
 "Language: zh-HK\n"
@@ -145,9 +145,6 @@ msgstr "下載彩色 SVG"
 msgid "Download PDF"
 msgstr "下載 PDF"
 
-msgid "Report icon as outdated"
-msgstr "報告圖標已過時"
-
 msgid "Layout"
 msgstr "佈局"
 
@@ -160,8 +157,11 @@ msgstr "緊湊"
 msgid "view $iconTitle"
 msgstr "查看 $iconTitle"
 
-msgid "Report $iconTitle as outdated"
-msgstr "報告 $iconTitle 已過時"
-
 msgid "Website repository"
 msgstr "網站項目"
+
+msgid "Icon outdated?"
+msgstr "有圖標過時了？"
+
+msgid "Report outdated icon"
+msgstr "報告過時的圖標"
