--- a/locales/pt.po
+++ b/locales/pt.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/simple-icons/simple-icons-website/issues\n"
 "POT-Creation-Date: 2022-10-07T19:52:50.250Z\n"
 "PO-Revision-Date: 2022-10-07 22:18+0200\n"
-"Last-Translator: \n"
-"Language-Team: pt <EMAIL@ADDRESS>\n"
+"Last-Translator: @mondeja <https://github.com/mondeja>\n"
+"Language-Team: pt <https://github.com/simple-icons>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
