--- a/locales/languages.json
+++ b/locales/languages.json
@@ -3,6 +3,7 @@
   "es": "Español",
   "fr": "Français",
   "it": "Italiano",
+  "ja-JP": "日本語",
   "pt": "Português",
   "zh-CN": "中文 (简体)",
   "zh-HK": "中文 (香港)",
