--- a/locales/languages.json
+++ b/locales/languages.json
@@ -4,6 +4,7 @@
   "fr": "Français",
   "it": "Italiano",
   "ja-JP": "日本語",
+  "ko-KR": "한국어",
   "pt": "Português",
   "zh-CN": "中文 (简体)",
   "zh-HK": "中文 (香港)",
