--- a/locales/ko-KR.po
+++ b/locales/ko-KR.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2023-09-03 17:16+0900\n"
 "Last-Translator: @sh-cho <https://github.com/sh-cho>\n"
 "Language-Team: ko-KR <https://github.com/simple-icons>\n"
-"Language: ko_KR\n"
+"Language: ko-KR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
