--- a/locales/languages.json
+++ b/locales/languages.json
@@ -6,6 +6,7 @@
   "ja-JP": "日本語",
   "ko-KR": "한국어",
   "pt": "Português",
+  "ru": "Русский",
   "uk": "Українська",
   "zh-CN": "中文 (简体)",
   "zh-HK": "中文 (香港)",
